--- a/AutoLayout/Base.lproj/Main.storyboard
+++ b/AutoLayout/Base.lproj/Main.storyboard
@@ -1,25 +1,117 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kex-8R-1cy">
+                                <rect key="frame" x="16" y="20" width="288" height="404"/>
+                                <connections>
+                                    <segue destination="Dte-pW-Tky" kind="embed" id="CFS-s0-FzU"/>
+                                </connections>
+                            </containerView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X22-od-SeF">
+                                <rect key="frame" x="51" y="485" width="30" height="30"/>
+                                <color key="backgroundColor" red="0.45098042490000001" green="0.75294125079999996" blue="0.3803921938" alpha="1" colorSpace="deviceRGB"/>
+                                <state key="normal" title="Left">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qbP-G5-nhz">
+                                <rect key="frame" x="232" y="485" width="37" height="30"/>
+                                <color key="backgroundColor" red="0.45098042490000001" green="0.75294125079999996" blue="0.3803921938" alpha="1" colorSpace="deviceRGB"/>
+                                <state key="normal" title="Right">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9uJ-8t-AAf">
+                                <rect key="frame" x="16" y="20" width="288" height="404"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="This will always be at bottom" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ogY-72-RMX">
+                                        <rect key="frame" x="10" y="356" width="268" height="40"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="3eX-WI-Itp"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pEr-iv-9gb">
+                                        <rect key="frame" x="164" y="293" width="42" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="pEr-iv-9gb" firstAttribute="leading" secondItem="9uJ-8t-AAf" secondAttribute="leading" constant="164" id="23P-ub-N0k"/>
+                                    <constraint firstAttribute="trailing" secondItem="pEr-iv-9gb" secondAttribute="trailing" constant="82" id="jaK-I2-B6s"/>
+                                    <constraint firstItem="ogY-72-RMX" firstAttribute="top" secondItem="pEr-iv-9gb" secondAttribute="bottom" constant="42" id="oIa-7j-x6I"/>
+                                    <constraint firstAttribute="bottom" secondItem="pEr-iv-9gb" secondAttribute="bottom" constant="90" id="xbZ-LG-sfP"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Kex-8R-1cy" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="0AF-JQ-n7s"/>
+                            <constraint firstItem="Kex-8R-1cy" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="7Ni-wX-YmP"/>
+                            <constraint firstItem="ogY-72-RMX" firstAttribute="leading" secondItem="Kex-8R-1cy" secondAttribute="leading" constant="10" id="SPH-ac-YzN"/>
+                            <constraint firstItem="Kex-8R-1cy" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="Xdn-r0-SOI"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="qbP-G5-nhz" secondAttribute="bottom" constant="53" id="Zi8-bV-rKw"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="X22-od-SeF" secondAttribute="bottom" constant="53" id="b44-Sm-syb"/>
+                            <constraint firstItem="Kex-8R-1cy" firstAttribute="bottom" secondItem="9uJ-8t-AAf" secondAttribute="bottom" id="gS9-4p-Q94"/>
+                            <constraint firstItem="9uJ-8t-AAf" firstAttribute="leading" secondItem="Kex-8R-1cy" secondAttribute="leading" id="gZB-Xc-0XF"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="qbP-G5-nhz" secondAttribute="trailing" constant="35" id="h0p-y2-Uy8"/>
+                            <constraint firstItem="9uJ-8t-AAf" firstAttribute="trailing" secondItem="Kex-8R-1cy" secondAttribute="trailing" id="mCQ-y3-WIr"/>
+                            <constraint firstItem="ogY-72-RMX" firstAttribute="bottom" secondItem="Kex-8R-1cy" secondAttribute="bottom" constant="-8" id="mg3-db-dNL"/>
+                            <constraint firstItem="9uJ-8t-AAf" firstAttribute="top" secondItem="Kex-8R-1cy" secondAttribute="top" id="nUa-D0-ePY"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="Kex-8R-1cy" secondAttribute="bottom" constant="144" id="njA-cF-coC"/>
+                            <constraint firstItem="X22-od-SeF" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="35" id="qg8-Ip-LSR"/>
+                            <constraint firstItem="ogY-72-RMX" firstAttribute="trailing" secondItem="Kex-8R-1cy" secondAttribute="trailing" constant="-10" id="qvb-xz-h19"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="139" y="332"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="6TU-ay-0hR">
+            <objects>
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="Dte-pW-Tky" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="093-xr-IRJ"/>
+                        <viewControllerLayoutGuide type="bottom" id="8a0-jV-yid"/>
+                    </layoutGuides>
+                    <view key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="pmb-nE-jxd">
+                        <rect key="frame" x="0.0" y="0.0" width="288" height="404"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <toolbarItems/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XwW-s5-q9a" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="577" y="268"/>
         </scene>
     </scenes>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
