--- a/AutoLayout/Base.lproj/Main.storyboard
+++ b/AutoLayout/Base.lproj/Main.storyboard
@@ -41,6 +41,9 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9uJ-8t-AAf">
                                 <rect key="frame" x="16" y="20" width="288" height="404"/>
                                 <subviews>
+                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="License" translatesAutoresizingMaskIntoConstraints="NO" id="uee-Wo-mcA">
+                                        <rect key="frame" x="0.0" y="0.0" width="800" height="500"/>
+                                    </imageView>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="This will always be at bottom" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ogY-72-RMX">
                                         <rect key="frame" x="10" y="356" width="268" height="40"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -50,18 +53,12 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pEr-iv-9gb">
-                                        <rect key="frame" x="164" y="293" width="42" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="pEr-iv-9gb" firstAttribute="leading" secondItem="9uJ-8t-AAf" secondAttribute="leading" constant="164" id="23P-ub-N0k"/>
-                                    <constraint firstAttribute="trailing" secondItem="pEr-iv-9gb" secondAttribute="trailing" constant="82" id="jaK-I2-B6s"/>
-                                    <constraint firstItem="ogY-72-RMX" firstAttribute="top" secondItem="pEr-iv-9gb" secondAttribute="bottom" constant="42" id="oIa-7j-x6I"/>
-                                    <constraint firstAttribute="bottom" secondItem="pEr-iv-9gb" secondAttribute="bottom" constant="90" id="xbZ-LG-sfP"/>
+                                    <constraint firstItem="uee-Wo-mcA" firstAttribute="top" secondItem="9uJ-8t-AAf" secondAttribute="top" id="DUv-xG-MZn"/>
+                                    <constraint firstAttribute="bottom" secondItem="uee-Wo-mcA" secondAttribute="bottom" id="eh7-5D-Lm1"/>
+                                    <constraint firstAttribute="trailing" secondItem="uee-Wo-mcA" secondAttribute="trailing" id="fPV-EH-o3x"/>
+                                    <constraint firstItem="uee-Wo-mcA" firstAttribute="leading" secondItem="9uJ-8t-AAf" secondAttribute="leading" id="psc-QJ-z0F"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
@@ -84,10 +81,14 @@
                             <constraint firstItem="ogY-72-RMX" firstAttribute="trailing" secondItem="Kex-8R-1cy" secondAttribute="trailing" constant="-10" id="qvb-xz-h19"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="uee-Wo-mcA" id="LDe-VF-it6"/>
+                        <outlet property="scrollView" destination="9uJ-8t-AAf" id="WpT-RS-7if"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="332"/>
+            <point key="canvasLocation" x="-7" y="297"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="6TU-ay-0hR">
@@ -109,6 +110,9 @@
             <point key="canvasLocation" x="577" y="268"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="License" width="800" height="500"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
